--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -14,6 +14,7 @@ Version 2.7.0 [TODO release date here] - Maintenance release
   #256 - DirTree: remove Linux-specific logic
   #253 - ImagePanel: allow custom border to be set
   #252 - ImageUtil: better validation in loadImageIcon
+  #251 - CoalescingDocumentListener has failed me for the last time
   #250 - AbstractProperty: add margin padding options
   #249 - New visual effects: FadeLayerUI, BlurLayerUI, SnowLayerUI
   #248 - ListField: offer built-in helper actions for common tasks
