--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -3,6 +3,7 @@ Author: Steve Corbett
 
 Version 2.7.0 [TODO release date here] - Maintenance release
   #308 - Bug: ImageTextUtil.drawText() now uses adjusted line length
+  #307 - Bug: ImagePanel was doubling mouse events for animated GIFs
   #305 - ImagePanel: add dispose() method to prevent memory leaks
   #301 - ImageListPanel: fix setBackground() behavior
   #299 - New ListField support class: ListItemSelectAllAction
