--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,6 +2,7 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.7.0 [TODO release date here] - Maintenance release
+  #315 - Bug: KeyStrokeManager.clear() was not removing accelerators
   #308 - Bug: ImageTextUtil.drawText() now uses adjusted line length
   #307 - Bug: ImagePanel was doubling mouse events for animated GIFs
   #305 - ImagePanel: add dispose() method to prevent memory leaks
