--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -6,6 +6,7 @@ Version 2.8.0 [TODO release date]
   #332 - ActionPanel: many usability improvements
   #330 - New UI component: ActionPanel
   #327 - KeyStrokeManager: add multiple window support
+  #322 - KeyStrokeProperty: fix bug regarding reserved keystrokes
 
 Version 2.7.0 [2026-01-25] - Maintenance release
   #317 - FormPanel: help labels can now be toggled dynamically
