--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,6 +2,7 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.8.0 [TODO release date]
+  #362 - ActionPanel: add CardLayout integration
   #359 - ActionPanel: more padding options
   #355 - TextInputDialog: better keyboard support
   #354 - FormField: avoid NPEs from poorly-coded FieldValidators
