--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,6 +2,7 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.8.0 [TODO release date]
+  #371 - ImageUtil: add savePngImage convenience method
   #370 - KeyStrokeManager: new convenience methods
   #362 - ActionPanel: add CardLayout integration
   #359 - ActionPanel: more padding options
