--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -7,6 +7,7 @@ Version 2.8.0 [TODO release date]
   #371 - ImageUtil: add savePngImage convenience method
   #370 - KeyStrokeManager: new convenience methods
   #367 - ActionPanel: extract ColorOptions
+  #363 - ActionPanel: highlight last action
   #362 - ActionPanel: add CardLayout integration
   #359 - ActionPanel: more padding options
   #355 - TextInputDialog: better keyboard support
