Issue #382 - new FormField: MarginsField/Property

--- a/src/main/resources/swing-extras/releaseNotes.txt
+++ b/src/main/resources/swing-extras/releaseNotes.txt
@@ -2,6 +2,7 @@ swing-extras Release Notes
 Author: Steve Corbett
 
 Version 2.8.0 [TODO release date]
+  #382 - New FormField: MarginsField / MarginsProperty
   #376 - ActionPanel: extract border options
   #375 - ActionPanel: extract expand/collapse options
   #371 - ImageUtil: add savePngImage convenience method
